--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -6,6 +6,7 @@
     <Text id="t1" text="hola mundo"></Text>
     <Button id="bt1" text="Productos" press="onProducts" ></Button>
     <Button id="bt2" text="Invoices" press="onInvoices" ></Button>
+    <Button id="bt3" text="Customers" press="onCustomers"></Button>
     </content>
     </Page>
 </mvc:View>
